2015-09-18  David Lamparter  <equinox-gentoo@diac24.net>

	* sysdeps/arm/setjmp.S: Change PIC to SHARED.
	* sysdeps/arm/__longjmp.S: Likewise

2015-09-18  Wilco Dijkstra  <wdijkstr@arm.com>

	* sysdeps/ieee754/dbl-64/s_signbit.c (__signbit):
	Use __builtin_signbit.
	* sysdeps/ieee754/flt-32/s_signbitf.c (__signbitf):
	Use __builtin_signbitf.
	* sysdeps/ieee754/ldbl-128/s_signbitl.c (__signbitl):
	Use __builtin_signbitl.
	* sysdeps/ieee754/ldbl-128ibm/s_signbitl.c (___signbitl): Likewise.
	* sysdeps/ieee754/ldbl-96/s_signbitl.c (__signbitl): Likewise.

2015-09-18  Wilco Dijkstra  <wdijkstr@arm.com>

	[BZ #15367]
	[BZ #17441]

	* math/Makefile: Build test-snan.c with -fsignaling-nans.
	* math/math.h (fpclassify): Use __builtin_fpclassify when
	available.  (signbit): Use __builtin_signbit(f/l).
	(isfinite): Use__builtin_isfinite.  (isnormal): Use
	__builtin_isnormal.  (isnan): Use __builtin_isnan.
	(isinf): Use __builtin_isinf_sign.

2015-09-18  Wilco Dijkstra  <wdijkstr@arm.com>

	* benchtests/Makefile: Add bench-math-inlines, link with libm.
	* benchtests/bench-math-inlines.c: New benchmark.
	* benchtests/bench-util.h: New file.
	* benchtests/bench-util.c: New file.
	* benchtests/bench-skeleton.c: Add include of bench-util.c/h.

2015-09-18  Carlos O'Donell  <carlos@redhat.com>

	* elf/tst-dlmopen1.c: Define TEST_SO.
	(do_test): Use TEST_SO.

	* elf/dl-load.c: Include libc-internal.h.
	(_dl_map_object_from_fd): Use ALIGN_UP and ALIGN_DOWN.

2015-09-18  Vincent Bernat  <vincent@bernat.im>

	[BZ #17887]
	* time/strptime_l.c (__strptime_internal): Make %z accept
	[+-]HH:MM time zones.

2015-09-18  Vincent Bernat  <vincent@bernat.im>

	[BZ #17886]
	* time/strptime_l.c (__strptime_internal): Make %z accept Z as a
	valid time zone.

2015-09-17  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/alpha/Makefile (CFLAGS-fdatasync.c): Delete.
	* sysdeps/unix/sysv/linux/alpha/fdatasync.c: Delete.
	* sysdeps/unix/sysv/linux/alpha/kernel-features.h